Fix spacing issues with Boostrap masonry. Make nav cleaner.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,7 +9,8 @@ body {
   font-family: "Lato", sans-serif;
 }
 
-.navbar-brand {
+.navbar-brand, 
+h1 {
   font-family: "Concert One";
 }
 
@@ -28,6 +29,10 @@ body {
     cursor: pointer;
 }
 
+#nav-last {
+  margin-left: 0.5em;
+}
+
 .add-note:hover,
 .save-article:hover,
 .delete-article:hover {
@@ -40,4 +45,34 @@ body {
 
 .note-display-title {
   text-decoration: underline;
+}
+
+@media (max-width: 1160px) {
+  .card-columns {
+      -webkit-column-count: 2;
+      -moz-column-count: 2;
+      column-count: 2;
+  }
+}
+
+@media (max-width: 991px) {
+  #nav-last {
+      margin-left: 0;
+      margin-top: 0.5em;
+  }
+}
+
+@media (max-width: 767px) {
+  .card-columns {
+      -webkit-column-count: 1;
+      -moz-column-count: 1;
+      column-count: 1;
+  }
+}
+
+@media (max-width: 575px) {
+  .card {
+      margin-left: auto;
+      margin-right: auto;
+  }
 }
